<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory App</string>
    <string name="quantity_label">Quantity: <xliff:g id="quantity" example="2"> %d</xliff:g></string>
    <string name="quantity_label_detail">Quantity:</string>
    <string name="price_label">Price: <xliff:g id="price" example="2"> %d </xliff:g> EUR</string>
    <string name="price_label_detail">Price (EUR):</string>
    <string name="name_label">Name:</string>
    <string name="cannot_sold">Item cannot be sold, quantity is zero</string>
    <string name="title_add">Add item</string>
    <string name="title_details">Inventory item details</string>
    <string name="save_button_label">Save</string>
    <string name="name_cannot_be_empty">Name field cannot be empty!</string>
    <string name="quantity_cannot_be_empty">Quantity field cannot be empty!</string>
    <string name="quantity_must_be_a_number">Quantity must be a number!</string>
    <string name="price_cannot_be_empty">Price field cannot be empty!</string>
    <string name="price_must_be_a_number">Price must be a number!</string>
    <string name="order_button_label">Order</string>
    <string name="menu_item_delete_title">delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this inventory item?</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="empty_list_information">Use add button to create new item.</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="supplier_label">Supplier number:</string>
    <string name="supplier_cannot_be_empty">Supplier field cannot be empty!</string>
    <string name="cannot_granted">Cannot make the order. Calling permission not granted.</string>
    <string name="permission_required">Call phone permission required to perform order!</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">decrease quantity</string>
    <string name="inventory_item_photo">inventory item photo</string>
    <string name="picture_cannot_be_empty">Picture cannot be empty! Take a photo.</string>
</resources>
